--- a/AutoLayoutDemo/Controllers/Menu/ALMenuViewController.xib
+++ b/AutoLayoutDemo/Controllers/Menu/ALMenuViewController.xib
@@ -9,6 +9,9 @@
             <connections>
                 <outlet property="menuContainerView" destination="59j-Gs-asw" id="Afe-pq-Cxe"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view1" destination="4fh-J4-aaw" id="Q21-gA-X1s"/>
+                <outlet property="view2" destination="zXY-rt-FQD" id="IFz-ts-1E3"/>
+                <outlet property="view3" destination="oM0-ja-XLu" id="Nxp-L6-Skv"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -18,9 +21,23 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="59j-Gs-asw" userLabel="MenuContainerView">
                     <rect key="frame" x="0.0" y="225" width="600" height="150"/>
-                    <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oM0-ja-XLu" userLabel="View3">
+                            <rect key="frame" x="400" y="0.0" width="200" height="150"/>
+                            <color key="backgroundColor" red="0.0" green="0.7215529758" blue="0.24844316120000001" alpha="1" colorSpace="calibratedRGB"/>
+                        </view>
+                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zXY-rt-FQD" userLabel="View2">
+                            <rect key="frame" x="200" y="0.0" width="200" height="150"/>
+                            <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </view>
+                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4fh-J4-aaw" userLabel="View1">
+                            <rect key="frame" x="0.0" y="0.0" width="200" height="150"/>
+                            <color key="backgroundColor" red="0.90588235289999997" green="0.48627450979999998" blue="0.1960784314" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="150" id="wic-Ae-Q6P"/>
+                        <constraint firstAttribute="height" constant="150" id="R5p-bI-KMR"/>
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="28i-tl-xEZ">
