--- a/AutoLayoutDemo/Controllers/Prompt/ALPromptViewController.xib
+++ b/AutoLayoutDemo/Controllers/Prompt/ALPromptViewController.xib
@@ -17,21 +17,12 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5YQ-qv-WSC">
-                    <rect key="frame" x="50" y="300" width="100" height="24"/>
-                    <color key="backgroundColor" red="0.87058823529999996" green="0.87843137250000003" blue="0.89019607840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                    <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
-                    <state key="normal" title="CANCEL">
-                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3F6-Os-YmB">
-                    <rect key="frame" x="200" y="300" width="123" height="24"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3F6-Os-YmB">
+                    <rect key="frame" x="312" y="282" width="264" height="36"/>
                     <color key="backgroundColor" red="0.98823529409999999" green="0.76862745099999996" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                     <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
-                    <state key="normal" title="CONTINUE">
+                    <state key="normal" title="DONATE BY TEXT">
                         <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
@@ -42,11 +33,30 @@
                         <action selector="dismissButtonPressed:" destination="-1" eventType="touchUpInside" id="m9H-KB-eJ5"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5YQ-qv-WSC">
+                    <rect key="frame" x="24" y="282" width="264" height="36"/>
+                    <color key="backgroundColor" red="0.87058823529999996" green="0.87843137250000003" blue="0.89019607840000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="36" id="LT8-XX-3ae"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                    <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
+                    <state key="normal" title="CANCEL">
+                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
             </subviews>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="5YQ-qv-WSC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="24" id="7OL-qG-sL6"/>
+                <constraint firstItem="3F6-Os-YmB" firstAttribute="width" secondItem="5YQ-qv-WSC" secondAttribute="width" id="7u7-7b-6sW"/>
+                <constraint firstAttribute="trailing" secondItem="3F6-Os-YmB" secondAttribute="trailing" constant="24" id="IRh-ST-7ph"/>
+                <constraint firstItem="3F6-Os-YmB" firstAttribute="centerY" secondItem="5YQ-qv-WSC" secondAttribute="centerY" id="ag7-US-1bs"/>
+                <constraint firstItem="3F6-Os-YmB" firstAttribute="height" secondItem="5YQ-qv-WSC" secondAttribute="height" id="h56-rr-JpW"/>
                 <constraint firstAttribute="bottom" secondItem="9MA-pu-TAB" secondAttribute="bottom" constant="50" id="hfS-30-G8u"/>
                 <constraint firstItem="9MA-pu-TAB" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="kfp-ub-N6H"/>
+                <constraint firstItem="3F6-Os-YmB" firstAttribute="leading" secondItem="5YQ-qv-WSC" secondAttribute="trailing" constant="24" id="szx-D0-QZm"/>
+                <constraint firstItem="5YQ-qv-WSC" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="tKn-Nq-DVr"/>
             </constraints>
             <point key="canvasLocation" x="292" y="276"/>
         </view>
