--- a/AutoLayoutDemo/Prompt Buttons/Base.lproj/Prompt.storyboard
+++ b/AutoLayoutDemo/Prompt Buttons/Base.lproj/Prompt.storyboard
@@ -21,15 +21,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CANCEL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jhb-Fj-JF8">
-                                <rect key="frame" x="15" y="323" width="162.5" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="CANCEL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jhb-Fj-JF8">
+                                <rect key="frame" x="15" y="323" width="157" height="21"/>
                                 <color key="backgroundColor" red="1" green="0.84469379194630867" blue="0.047740142620000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DONATION BY TEXT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ohl-6I-C3a">
-                                <rect key="frame" x="197.5" y="323" width="162.5" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="DONATION BY TEXT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ohl-6I-C3a">
+                                <rect key="frame" x="192" y="323" width="168" height="21"/>
                                 <color key="backgroundColor" red="0.90588235289999997" green="0.48627450979999998" blue="0.1960784314" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                 <nil key="textColor"/>
@@ -45,7 +45,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="ohl-6I-C3a" firstAttribute="width" secondItem="Jhb-Fj-JF8" secondAttribute="width" id="4gT-PY-7kM"/>
+                            <constraint firstItem="ohl-6I-C3a" firstAttribute="width" secondItem="Jhb-Fj-JF8" secondAttribute="width" priority="999" id="4gT-PY-7kM"/>
                             <constraint firstAttribute="trailing" secondItem="ohl-6I-C3a" secondAttribute="trailing" constant="15" id="5us-Vq-HP6"/>
                             <constraint firstItem="Jhb-Fj-JF8" firstAttribute="leading" secondItem="U5q-eO-qoJ" secondAttribute="leading" constant="15" id="8wm-gq-bgO"/>
                             <constraint firstItem="8jp-LQ-3gS" firstAttribute="centerX" secondItem="U5q-eO-qoJ" secondAttribute="centerX" id="HWG-Wl-dlm"/>
