--- a/AutoLayoutDemo/Menu.storyboard
+++ b/AutoLayoutDemo/Menu.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ncn-xc-rFn">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ncn-xc-rFn">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -35,10 +35,19 @@
                                     <segue destination="pnu-Ai-bte" kind="show" id="TwM-aQ-vp0"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lYb-Bt-vch">
+                                <rect key="frame" x="121.5" y="318" width="131" height="30"/>
+                                <state key="normal" title="TableView Example"/>
+                                <connections>
+                                    <segue destination="jz1-Ja-cea" kind="show" id="gqs-aS-84R"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="RjE-xY-CUI" firstAttribute="centerX" secondItem="P4r-Py-mWc" secondAttribute="centerX" id="0Jn-pc-XJa"/>
+                            <constraint firstItem="lYb-Bt-vch" firstAttribute="centerY" secondItem="P4r-Py-mWc" secondAttribute="centerY" id="8TU-Wq-RmY"/>
+                            <constraint firstItem="lYb-Bt-vch" firstAttribute="centerX" secondItem="P4r-Py-mWc" secondAttribute="centerX" id="T95-I8-iw5"/>
                             <constraint firstItem="ztG-eo-0CT" firstAttribute="centerX" secondItem="P4r-Py-mWc" secondAttribute="centerX" id="TPF-eJ-qhS"/>
                             <constraint firstItem="RjE-xY-CUI" firstAttribute="centerY" secondItem="P4r-Py-mWc" secondAttribute="centerY" constant="50" id="Zms-by-DuG"/>
                             <constraint firstItem="ztG-eo-0CT" firstAttribute="centerY" secondItem="P4r-Py-mWc" secondAttribute="centerY" constant="-50" id="lCx-3Z-wgC"/>
@@ -58,6 +67,14 @@
             </objects>
             <point key="canvasLocation" x="2840" y="-374.21289355322341"/>
         </scene>
+        <!--TableView-->
+        <scene sceneID="DIC-9Y-llb">
+            <objects>
+                <viewControllerPlaceholder storyboardName="TableView" id="jz1-Ja-cea" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Bh-DO-aW7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2876" y="-228"/>
+        </scene>
         <!--Prompt-->
         <scene sceneID="zSM-ce-yLg">
             <objects>
@@ -72,7 +89,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ncn-xc-rFn" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Be2-ka-nm2">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
