--- a/AutoLayoutDemo/Menu.storyboard
+++ b/AutoLayoutDemo/Menu.storyboard
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ncn-xc-rFn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ncn-xc-rFn">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Auto Layout Demo-->
         <scene sceneID="wQs-XB-cQL">
             <objects>
-                <viewController id="ru9-Ie-t46" sceneMemberID="viewController">
+                <viewController id="ru9-Ie-t46" customClass="ViewController" customModule="AutoLayoutDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="znW-yw-Ymd"/>
                         <viewControllerLayoutGuide type="bottom" id="z1B-LI-DXx"/>
@@ -42,6 +42,13 @@
                                     <segue destination="jz1-Ja-cea" kind="show" id="gqs-aS-84R"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ci-8n-7Uq">
+                                <rect key="frame" x="103" y="418.5" width="169" height="30"/>
+                                <state key="normal" title="Layout Anchors Example"/>
+                                <connections>
+                                    <action selector="openLayoutAnchorsExample:" destination="ru9-Ie-t46" eventType="touchUpInside" id="IIm-7M-aU3"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -51,6 +58,8 @@
                             <constraint firstItem="ztG-eo-0CT" firstAttribute="centerX" secondItem="P4r-Py-mWc" secondAttribute="centerX" id="TPF-eJ-qhS"/>
                             <constraint firstItem="RjE-xY-CUI" firstAttribute="centerY" secondItem="P4r-Py-mWc" secondAttribute="centerY" constant="50" id="Zms-by-DuG"/>
                             <constraint firstItem="ztG-eo-0CT" firstAttribute="centerY" secondItem="P4r-Py-mWc" secondAttribute="centerY" constant="-50" id="lCx-3Z-wgC"/>
+                            <constraint firstItem="0ci-8n-7Uq" firstAttribute="centerX" secondItem="P4r-Py-mWc" secondAttribute="centerX" id="lrP-6o-RUs"/>
+                            <constraint firstItem="0ci-8n-7Uq" firstAttribute="centerY" secondItem="P4r-Py-mWc" secondAttribute="centerY" constant="100" id="x72-Kw-HAi"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Auto Layout Demo" id="chK-A7-lRK"/>
